[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["xiaxianlin <dreamtimefly@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
